# memorant

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  RELEASE_NOTES.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md  PUBLISHING.md  context-tuner.md  expectation-ledger.md  suite.md
examples/hermes_plugin/: __init__.py  plugin.yaml
plans/: elle-palace-memorant-upgrade.md
references/: _glm-doctrine-full.md  _glm_runner.py  architecture-remediation-plan.md  architecture-root-cause-analysis.md  claude-doctrine-analysis-prompt.md  glm-doctrine-analysis.md  glm-doctrine-review-prompt.md
reports/: elle-palace-memorant-deployment-2026-06-22.md  memorant-v1-architecture-remediation-report.md
scripts/: fix_andre_ship_conftest.py  fix_andre_ship_imports.py  fix_andre_ship_imports_v2.py  fix_audit_log_query.py  fix_resonance_log_key.py  migrate_palace_v2.py  patch_mcp_for_memorant.py  patch_memory_palace_status.py  test_ssrf_fixed.py
src/context_tuner/: __init__.py  compressor.py  core.py  errors.py  recovery.py  schema.py
src/expectation_ledger/: __init__.py  core.py  schema.py  trust.py
src/memorant/: __init__.py  cli.py  core.py  retriever.py  schema.py  suite.py  trust.py
src/memorant/_vendor/: agent-event.schema.json  doctor.py  event.py  flight_recorder.py  schema_validator.py  sqlcipher.py  steward.py
src/memorant/adapters/: hermes.py  openclaw.py
src/smarter_memory_palace/: __init__.py  cli.py  core.py  schema.py
src/smarter_memory_palace/adapters/: hermes.py  openclaw.py
tests/: test_context_tuner.py  test_core.py  test_deployment_patch_scripts.py  test_expectation_ledger.py  test_schema_validator.py  test_suite.py
