[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "memorant"
version = "0.1.0-alpha.1"
description = "Local-first memory substrate for agents: claim units, standing state, digest review, correction propagation, and ambient resonance."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Miguel Johnson and Andre"}]
keywords = ["ai", "agents", "memory", "sqlite", "hermes", "openclaw", "retrieval"]
classifiers = ["Development Status :: 3 - Alpha", "License :: OSI Approved :: Apache Software License", "Programming Language :: Python :: 3"]
dependencies = []

[project.urls]
Homepage = "https://github.com/tier4research/memorant"
Documentation = "https://github.com/tier4research/memorant#readme"
Repository = "https://github.com/tier4research/memorant"
Issues = "https://github.com/tier4research/memorant/issues"
Changelog = "https://github.com/tier4research/memorant/releases"

[project.optional-dependencies]
embeddings = ["sentence-transformers>=3.0", "numpy>=1.24"]
test = ["pytest>=8.0"]

[project.scripts]
memorant = "memorant.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/memorant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
