[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "memorant"
version = "1.0.0-rc.1"
description = "Trustworthy local-first memory substrate for AI agents — claim units, standing state, trust tiers, correction propagation, and ambient resonance."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Tier 4 Research"}]
keywords = ["ai", "agents", "memory", "sqlite", "trust", "retrieval", "resonance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
embeddings = ["sentence-transformers>=3.0", "numpy>=1.24"]
encryption = ["sqlcipher3"]
test = ["pytest>=8.0"]

[project.scripts]
memorant = "memorant.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/memorant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
